Fix: footer wrap

--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,6 @@
 
 body {
     font-size: 75%;
-    font-weight: 600;
     font-family: Arial, Helvetica, sans-serif;
     color: #ffffff;
 }
@@ -15,7 +14,8 @@ body {
 /* HEADER */
 header {
     padding: .2rem;
-    height: 4rem;
+    min-height: 4rem;
+    width: 100%;
     text-align: right;
     background-color: #000000;
 }
@@ -33,7 +33,7 @@ main {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    height: calc(100vh - 10rem);
+    height: calc(100vh - 11rem);
     background-color: #000000;
     overflow-y: auto;
 }
@@ -65,9 +65,15 @@ main {
 footer {
     display: flex;
     justify-content: space-between;
-    align-content: flex-start;
-    min-height: 6rem;
+    width: 100%;
+    min-height: 7rem;
     background-color: #292929;
+}
+
+.media-input {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 .btn {
@@ -78,13 +84,12 @@ footer {
 }
 
 .icon {
-    font-size: 1.6rem;
+    font-size: 1.4rem;
     margin-bottom: .25em;
 }
 
-.media-input {
-    display: flex;
-    flex-wrap: wrap;
+.chev {
+    padding-left: .8rem;
 }
 
 .actions {
@@ -99,8 +104,9 @@ footer {
 
 .end-btn {
     padding: 0 2em;
+    min-width: 7.5rem;
     text-align: center;
-    line-height: 6rem;
+    line-height: 7rem;
     color: #ff5656;
     background-color: #585858;
 }
